Fix nav links spacing

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ img {
     padding: 10px 10px 10px 10px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: center;
     box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
